--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/myblog?characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=liujiahao
+spring.datasource.password=
 
 #druid idle config
 spring.datasource.druid.initial-size=5
@@ -89,8 +89,8 @@ spring.redis.lettuce.pool.min-idle=0
 spring.mvc.favicon.enabled=false
 
 #Aliyun Configuration
-aliyun.accessKeyId=LTAI4FnTmwBFpnxSzcnn3Zoh
-aliyun.secret=euQOfRcFuxolfr0bVWiSAhadj3gHA3
+aliyun.accessKeyId=
+aliyun.secret=
 aliyun.404Url=http://static.lhanman.cn/public/blogCover/ServerError.jpeg?OSSAccessKeyId=LTAI4FnTmwBFpnxSzcnn3Zoh&Expires=1592101628&Signature=N%2BbsF%2BqpWcLdY0B2lRXXXqj83FM%3D
 aliyun.defaultMaleAvatar=http://static.lhanman.cn/public/user/default/default.png?OSSAccessKeyId=LTAI4FnTmwBFpnxSzcnn3Zoh&Expires=1598503092&Signature=CnFE8HIxo64FZbRU92xtL5bHWaE%3D
 aliyun.defaultFemaleAvatar=http://static.lhanman.cn/public/user/default/default-female.png?OSSAccessKeyId=LTAI4FnTmwBFpnxSzcnn3Zoh&Expires=1598503058&Signature=GR%2BVUAtaTXak5AcNkaRPo%2BEsUvI%3D
@@ -98,7 +98,7 @@ aliyun.defaultFemaleAvatar=http://static.lhanman.cn/public/user/default/default-
 #bilibili of api config
 BILIBILI_ANIME_METTING_URL = https://api.bilibili.com/x/space/bangumi/follow/list
 BILIBILI_UID=6443209
-BILIBILI_COOKIE=LIVE_BUVID=AUTO5215653472929615; sid=5uvtc5l3; CURRENT_FNVAL=16; stardustvideo=1; rpdid=|(umR~Y|~R|k0J'ulYlJR~JRR; fts=1565862017; CURRENT_QUALITY=112; DedeUserID=6443209; DedeUserID__ckMd5=37942c0423c02882; SESSDATA=36f22a7d%2C1602748385%2C29d1e*41; bili_jct=d7ab2e72f3c0befc669f95f21e5626c8
+BILIBILI_COOKIE=LIVE_BUVID=AUTO5215653472929615; sid=5uvtc5l3;pdid=|(umR~Y|~R|k0J'ulYlJR~JRR; fts=1565862017; CURRENT_QUALITY=112; DedeUserID=6443209; DedeUserID__ckMd5=37942c0423c02882; SESSDATA=36f22a7d%2C1602748385%2C29d1e*41; bili_jct=d7ab2e72f3c0befc669f95f21e5626c8
 
 #163 mail for springboot
 spring.mail.host=smtp.163.com
@@ -118,10 +118,10 @@ spring.data.redis.repositories.enabled=false
 logging.config=classpath:log4j2.xml
 
 #Baidu TongJi refreshToken
-bdTongJi_refreshToken = 122.a0bf569e6adfa811e0dafb8a69b52703.Y7ZByL8L34W0RwaBH_SWOZgzw0P8u3jEx8_VjGn.BGJdkA
-bdTongJi_accessToken = 121.4e345fa8b10031923d4b834411cefa4a.YlpBkm7VnH6aIhrp5DEmp619o-UKxSa2wdE6ilA.k0mtKA
+bdTongJi_refreshToken =
+bdTongJi_accessToken =
 bdTongJi_clientId = gKHDxedqurObcnVx59vN1eeF
-bdTongJi_clientSecret = L8xEBwPPfeEyzDDkMQgiWa9ergHMaYwZ
+bdTongJi_clientSecret = 
 bdTongJi_siteId = 15010650
 bdTongJi_startDate = 20200501
 bdTongJi_endDate = 20201231
