--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -91,9 +91,9 @@ spring.mvc.favicon.enabled=false
 #Aliyun Configuration
 aliyun.accessKeyId=
 aliyun.secret=
-aliyun.404Url=http://static.lhanman.cn/public/blogCover/ServerError.jpeg?OSSAccessKeyId=LTAI4FnTmwBFpnxSzcnn3Zoh&Expires=1592101628&Signature=N%2BbsF%2BqpWcLdY0B2lRXXXqj83FM%3D
-aliyun.defaultMaleAvatar=http://static.lhanman.cn/public/user/default/default.png?OSSAccessKeyId=LTAI4FnTmwBFpnxSzcnn3Zoh&Expires=1598503092&Signature=CnFE8HIxo64FZbRU92xtL5bHWaE%3D
-aliyun.defaultFemaleAvatar=http://static.lhanman.cn/public/user/default/default-female.png?OSSAccessKeyId=LTAI4FnTmwBFpnxSzcnn3Zoh&Expires=1598503058&Signature=GR%2BVUAtaTXak5AcNkaRPo%2BEsUvI%3D
+aliyun.404Url=http://static.lhanman.cn/public/blogCover/ServerError.jpeg
+aliyun.defaultMaleAvatar=http://static.lhanman.cn/public/user/default/default.png
+aliyun.defaultFemaleAvatar=http://static.lhanman.cn/public/user/default/default-female.png
 
 #bilibili of api config
 BILIBILI_ANIME_METTING_URL = https://api.bilibili.com/x/space/bangumi/follow/list
